--- a/action.yml
+++ b/action.yml
@@ -111,7 +111,7 @@ runs:
     - name: install package
       shell: bash
       run: |
-         echo "::group::Installing Building Depend Packages"
+         echo "::group:: <<<Installing Building Depend Packages"
          sudo apt install -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3
          echo "::endgroup::"
 
@@ -119,7 +119,7 @@ runs:
       shell: bash
       if: inputs.aosp-gcc == 'true'
       run: |
-        echo "::group::Downloading AOSP GCC"
+        echo "::group:: <<<Downloading AOSP GCC"
         if [ ${{ inputs.aosp-clang }} = true ]; then
             mkdir -p -v $HOME/gcc-64
             wget -q -O gcc-aarch64.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
@@ -137,7 +137,7 @@ runs:
       if: inputs.android-ndk == 'true'
       shell: bash
       run: |
-        echo "::group::Downloading Android NDK"
+        echo "::group:: <<<Downloading Android NDK"
         if [ ${{ inputs.aosp-gcc }} = false ]; then
             echo
             if [ ${{ inputs.android-ndk-x64 }} = false ]; then
@@ -166,7 +166,7 @@ runs:
     - name: use python 2.7
       if: inputs.python-27 == 'true'
       run: |
-        echo "::group::Installing Python2.7 instead Python3"
+        echo "::group:: <<<Installing Python2.7 instead Python3"
         sudo apt install -y -q python2.7 python2.7-minimal
         sudo rm -v /bin/python
         sudo ln -s /bin/python2.7 /bin/python
@@ -177,7 +177,7 @@ runs:
     - name: download aosp clang
       if: inputs.aosp-clang == 'true'
       run: |
-        echo "::group::Downloading AOSP clang"
+        echo "::group:: <<<Downloading AOSP clang"
         if [ ${{ inputs.aosp-gcc }} = true ]; then
             mkdir $HOME/clang -p -v 
             wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
@@ -191,7 +191,7 @@ runs:
 
     - name: pull kernel source from selected branch
       run: |
-        echo "::group::Pulling Kernel Source"
+        echo "::group:: <<<Pulling Kernel Source"
         git clone ${{ inputs.kernel-url }} -b "${{ inputs.branch }}" --depth=1 ${{ inputs.kernel-dir }}
         echo "::endgroup::"
       shell: bash
@@ -199,7 +199,7 @@ runs:
     - name: pull vendor source
       if: inputs.vendor == 'true'
       run: |
-        echo "::group::Pulling Kernel vendor source"
+        echo "::group:: <<<Pulling Kernel vendor source"
         git clone ${{ inputs.vendor-url }} --depth=1 ${{ inputs.vendor-dir }}
         echo "::endgroup::"
       shell: bash
@@ -219,7 +219,7 @@ runs:
     - name: pull kernelsu
       if: inputs.ksu == 'true'
       run: |
-        echo "::group::Installing KernelSU"
+        echo "::group:: <<<Installing KernelSU"
         cd ${{ inputs.kernel-dir }}
         curl -LSs "https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh" | bash -s ${{ inputs.ksu-version }}
         echo "::endgroup::"
@@ -259,7 +259,7 @@ runs:
       if: inputs.lxc == 'true'
       shell: bash
       run: |
-         echo "::group::Enabling LXC"
+         echo "::group:: <<<Enabling LXC"
          cd ${{ inputs.kernel-dir }}
          wget https://github.com/wu17481748/lxc-docker/raw/main/LXC-DOCKER-OPEN-CONFIG.sh
          bash LXC-DOCKER-OPEN-CONFIG.sh ${{ inputs.config }} -w
@@ -277,7 +277,7 @@ runs:
     - name: build kernel with clang
       if: inputs.aosp-clang == 'true'
       run: |
-        echo "::group::Building Kernel"
+        echo "::group:: <<<Building Kernel"
         cd ${{ inputs.kernel-dir }}
         mkdir -p -v out
         export CLANG_PATH=$HOME/clang
@@ -295,7 +295,7 @@ runs:
     - name: build kernel with gcc
       if: inputs.aosp-gcc == 'true'
       run: |
-        echo "::group::Building Kernel use GCC"
+        echo "::group:: <<<Building Kernel use GCC"
         if [ ${{ inputs.aosp-clang }} = false ]; then
             cd ${{ inputs.kernel-dir }}
             mkdir -p -v out
@@ -311,7 +311,7 @@ runs:
       if: inputs.android-ndk == 'true'
       shell: bash
       run: |
-        echo "::group::Building Kernel with Android NDK"
+        echo "::group:: <<<Building Kernel with Android NDK"
         cd ${{ inputs.kernel-dir }}
         mkdir -p -v out
         export CLANG_PATH=$HOME/android-ndk-${{ inputs.android-ndk-version }}/toolchains/llvm/prebuilt/linux-x86_64
@@ -329,7 +329,7 @@ runs:
       if: inputs.anykernel3 == 'false'
       shell: bash
       run: |
-        echo "::group::Preparing to Upload bare-compiled-kernel"
+        echo "::group:: <<<Preparing to Upload bare-compiled-kernel"
         mkdir -p -v build
         if [ -f ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image.*-dtb ]; then
            cp ${{ inputs.kernel-dir }}/out/arch/${{ inputs.arch }}/boot/Image.*-dtb build -rv
@@ -343,7 +343,7 @@ runs:
     - name: package with anykernel3
       if: inputs.anykernel3 == 'true'
       run: | 
-        echo "::group::Packaging Anykernel3 flasher"
+        echo "::group:: <<<Packaging Anykernel3 flasher"
         git clone https://github.com/osm0sis/AnyKernel3
         sed -i 's!block=/dev/block/platform/omap/omap_hsmmc.0/by-name/boot;!block=auto;!g' AnyKernel3/anykernel.sh
         sed -i 's/do.devicecheck=1/do.devicecheck=0/g' AnyKernel3/anykernel.sh
