--- a/action.yml
+++ b/action.yml
@@ -108,13 +108,12 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - id: cleanup
-      uses: rokibhasansagar/slimhub_actions@main
       
     - name: install package
       shell: bash
       run: |
          echo "::group:: <<<Installing Building Depend Packages"
+         curl -SsL https://github.com/rokibhasansagar/slimhub_actions/raw/main/cleanup.sh | bash
          sudo apt install -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3
          echo "::endgroup::"
 
@@ -197,7 +196,7 @@ runs:
         echo "::group:: <<<Pulling Kernel Source"
         git clone ${{ inputs.kernel-url }} -b "${{ inputs.branch }}" --depth=${{ inputs.depth }} ${{ inputs.kernel-dir }}
         cd ${{ inputs.kernel-dir }}
-        test -f .gitmodules || git submodule update --init
+        test -f .gitmodules && git submodule update --init
         echo "::endgroup::"
       shell: bash
 
