action:add kernel build take time

--- a/action.yml
+++ b/action.yml
@@ -124,12 +124,11 @@ runs:
     - name: Set swap space
       uses: pierotofy/set-swap-space@master 
       with: 
-        swap-size-gb: 12
+        swap-size-gb: 16
 
-    - name: install package
+    - name: Build Kernel
       shell: bash
       run: |
-         echo
          echo "::group:: Installing Building Depend Packages"
          sudo apt-get install -q -y binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python3
          echo "::endgroup::"
@@ -291,6 +290,10 @@ runs:
              fi
              echo "::endgroup::"
          fi
+
+         export B=$(date +%s)
+         export C=$(expr $B - $A)
+         echo "kernel build finish,takes" $(expr $C / 60)"min"$(expr $C % 60)"s"
 
          if [ ${{ inputs.anykernel3 }} = false ]; then
             echo "::group:: Preparing to Upload bare-compiled-kernel"
