--- a/action.yml
+++ b/action.yml
@@ -165,7 +165,6 @@ runs:
                      wget -O android-ndk.zip https://dl.google.com/android/repository/android-ndk-${{ inputs.android-ndk-version }}-linux-x86_64.zip
                      unzip -d $HOME android-ndk.zip
                  fi
-                 echo
              else
                  echo "Please disable aosp-gcc and aosp-clang."
                  exit 127
@@ -196,7 +195,7 @@ runs:
              echo "::group:: Downloading AOSP clang"
              if [ ${{ inputs.aosp-gcc }} = true ]; then
                  mkdir $HOME/clang -p -v 
-                 wget -q https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
+                 wget https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/android${{ inputs.android-version }}-release/clang-${{ inputs.aosp-clang-version }}.tar.gz
                  tar -C $HOME/clang -zxf clang-${{ inputs.aosp-clang-version }}.tar.gz
              else
                  echo "Please enable aosp-gcc."
