--- a/action.yml
+++ b/action.yml
@@ -82,13 +82,16 @@ inputs:
   aosp-clang-version:
     required: false
     default: "r383902"
-  3rd-clang-url:
+  other-clang-url:
     required: false
     default: ''
-  3rd-clang:
+  other-clang:
     description: 'Use clang from 3rd party.'
     required: false
     default: false
+  other-clang-branch:
+    required: false
+    default: main
   android-ndk:
     description: 'Use Android NDK to build kernrl (Experimental features)'
     required: false
@@ -162,21 +165,21 @@ runs:
          echo "::endgroup::"
 
          echo "::group:: Downloading 3rd clang"
-         if [ ${{ inputs.3rd-clang }} = true ]; then
+         if [ ${{ inputs.other-clang }} = true ]; then
              if [ ${{ inputs.aosp-clang }} = true ]; then
                  echo "please disable aosp-clang to use 3rd clang."
                  exit 1
              else
-                 if [[ ${{ inputs.3rd-clang-url }} =~ git ]]; then 
-                     if [[ ${{ inputs.3rd-clang-url }} == *'.tar.gz' ]]; then
-                         wget -O clang.tar.gz ${{ inputs.3rd-clang-url }}
+                 if [[ ${{ inputs.other-clang-url }} =~ git ]]; then 
+                     if [[ ${{ inputs.other-clang-url }} == *'.tar.gz' ]]; then
+                         wget -O clang.tar.gz ${{ inputs.other-clang-url }}
                          mkdir $HOME/aosp-clang -p -v
                          tar -C $HOME/aosp-clang -zxvf clang.tar.gz
                      else
-                         git clone ${{ inputs.3rd-clang-url }} -b ${{ inputs.3rd-clang-branch }} $HOME/aosp-clang --depth=${{ inputs.depth }}
+                         git clone ${{ inputs.other-clang-url }} -b ${{ inputs.other-clang-branch }} $HOME/aosp-clang --depth=${{ inputs.depth }}
                      fi        
                  else
-                     wget -O clang.zip ${{ inputs.3rd-clang-url }}
+                     wget -O clang.zip ${{ inputs.other-clang-url }}
                      mkdir $HOME/aosp-clang
                      unzip clang.zip -d $HOME/aosp-clang
                  fi
