fix 3rd clang compile

--- a/action.yml
+++ b/action.yml
@@ -313,6 +313,19 @@ runs:
                  make -j$(nproc --all) CROSS_COMPILE=$CLANG_PATH/bin/llvm- COMPILE_ARM32=$CLANG_PATH/bin/llvm- CLANG_TRIPLE=aarch64-linux-android$(( ${{ inputs.android-version }} + 19 ))- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
              fi
              echo "::endgroup::"
+         elif [ ${{ inputs.other-clang }} = true ]; then
+             echo "::group:: Building Kernel"
+             mkdir -p -v out
+             export CLANG_PATH=$HOME/clang
+             export PATH=$CLANG_PATH/bin:$PATH
+             make -j$(nproc --all) CROSS_COMPILE=$HOME/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$HOME/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.config }}
+             if [ ${{ inputs.ccache }} = true ]; then
+                 export USE_CCACHE=1
+                 make -j$(nproc --all) CROSS_COMPILE=$HOME/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$HOME/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC="ccache clang" ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
+             else
+                 make -j$(nproc --all) CROSS_COMPILE=$HOME/gcc-64/bin/aarch64-linux-android- COMPILE_ARM32=$HOME/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu- CC=clang ARCH=${{ inputs.arch }} O=out ${{ inputs.extra-cmd }}
+             fi
+             echo "::endgroup::"
          fi
 
          export B=$(date +%s)
@@ -369,4 +382,4 @@ posts:
   steps:
     - name: post
       shell: bash
-      run:  bash $GITHUB_ACTION_PATH/post.sh
+      run:  $HOME/clang/bin/clang --version
